[tool.poetry]
name = "aumbry"
version = "0.10.0"
description = "Multi-type configuration library for Python"
authors = ["John Vrbanac <john.vrbanac@linux.com>"]
license = "Apache v2"
readme = "README.rst"
homepage = "https://github.com/pyarmory/aumbry"
keywords = ["configuration", "yaml", "etcd", "json", "parameter", "store", "multiple"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = ">=3.7"
alchemize = ">=0.10.0"
pike = "*"
deepmerge = "*"
pyyaml = { version = ">=5.1", optional = true }
cryptography = { version = ">=2.1.2", optional = true }

[tool.poetry.extras]
yaml = ["pyyaml"]
consul = ["requests"]
etcd2 = ["requests"]
param_store = ["boto3"]
fernet = ["cryptography"]
cli = ["pyyaml", "requests", "boto3", "cryptography"]

[tool.poetry.scripts]
aumbry = "aumbry.cli.app:main"

[tool.poetry.group.dev.dependencies]
flake8 = "<5.0.4"
specter = "^0.6.1"
requests-mock = "^1.12.1"
pretend = "^1.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
